src/test/ui/nll/issue-61424.stderr
error: variable does not need to be mutable
  --> $DIR/issue-61424.rs:4:9
   |
LL |     let mut x;
   |         ----^
   |         |
   |         If I were you, I would simply remove this `mut`
   |
note: lint level defined here
  --> $DIR/issue-61424.rs:1:9
   |
LL | #![deny(unused_mut)]
   |         ^^^^^^^^^^

error: aborting due to previous error

